--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>QuMart</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="/assets/fav.png">
+  <link rel="icon" type="image/png" href="assets/fav.png">
   <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
